# vitejs-assets-downloader

./: .gitignore  README.md  diff.txt  main.py  pyproject.toml
vitedl/: __init__.py  cli.py
